Change application colors

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background: #233047;
+  background-image: linear-gradient(180deg, rgb(38, 30, 158), rgb(32, 138, 129));
 }
 
 .container {
